--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,8 +4,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-<link rel="stylesheet" href="../templates/font-awesome/css/font-awesome.min.css">
-
+<link rel="stylesheet" href="../static/font-awesome/css/font-awesome.min.css">
+<link rel="stylesheet" href="../static/effect.css">
 <body>
 
 <!-- Header -->
@@ -38,32 +38,36 @@
     {% for user in users %}
         <div class="w3-row">
             <div class="w3-threequarter w3-card-2 w3-light-grey w3-margin-bottom w3-margin-right w3-round">
-                <div class="w3-container w3-twothird w3-margin-top w3-margin-bottom">
-                    <img src="{{ user.pet.img_ava }}" alt="{{ user.pet.name }}" class="w3-hover-opacity w3-round w3-image" width="100%">
+                <div class="hovereffect w3-container w3-twothird w3-margin-top w3-margin-bottom">
+                    <img src="{{ user.pet.img_ava }}" alt="{{ user.pet.name }}" class="w3-round w3-image" width="100%">
+                    <div class="overlay">
+                       <h2>{{ user.pet.name }}</h2>
+                       <a class="info" href="#">View Profile</a>
+                    </div>
                 </div>
                 <div class="w3-third w3-container">
+                    <script type="text/javascript">
+                        var clicks = {{ user.pet.like_count }};
+                        function onClick() {
+                            clicks += 1;
+                            document.getElementById("clicks").innerHTML = clicks;
+                        }
+                    </script>
                     <h4 class="w3-border-bottom"><i class="w3-text-teal fa fa-user w3-margin-right"></i>{{ user.username }}</h4>
                     <h4 class="w3-border-bottom"><i class="w3-text-teal fa fa-paw w3-margin-right"></i>{{ user.pet.name }}</h4>
                     <h4 class="w3-border-bottom"><i class="w3-text-teal fa fa-pencil w3-margin-right"></i>{{ user.pet.upload_info.des }}</h4>
-                    <h4 class="w3-border-bottom"><i class="w3-text-red fa fa-heart w3-margin-right"></i>{{ user.pet.like_count }}</h4>
-                    <button class="w3-btn-block w3-margin-bottom w3-red">Vote</button>
+                    <h4 class="w3-border-bottom"><i class="w3-text-red fa fa-heart w3-margin-right"></i><a id="clicks">{{ user.pet.like_count }}</a></h4>
+                    <button type="button" class="w3-red w3-margin-bottom w3-btn-block" onClick="onClick()">Vote</button>
                 </div>
                 <div class="w3-third w3-container w3-margin-bottom">
                     <div class="w3-container w3-blue w3-center">
                         <p>More Pics</p>
                     </div>
-                    <div class="w3-half">
-                        <img src="{{ user.pet.upload_info.img_upload }}" width="145", height="145">
-                    </div>
-                    <div class="w3-half">
-                        <img src="{{ user.pet.upload_info.img_upload }}" width="145", height="145">
-                    </div>
-                    <div class="w3-half">
-                        <img src="{{ user.pet.upload_info.img_upload }}" width="145", height="145">
-                    </div>
-                    <div class="w3-half">
-                        <img src="{{ user.pet.upload_info.img_upload }}" width="145", height="145">
-                    </div>
+                    {% for i in range(0,4) %}
+                        <div class="w3-half">
+                            <img src="{{ user.pet.upload_info.img_upload }}" width="145", height="145">
+                        </div>
+                    {% endfor %}
                 </div>
             </div>
             <div class="w3-rest w3-container w3-card-2 w3-light-grey w3-center w3-round">
