--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -55,7 +55,7 @@
                             document.getElementById("clicks").innerHTML = clicks;
                           var a = true;
                           if (a == true){
-                          document.getElementById("crazy").disabled = true}
+                          document.getElementById("crazy").disabled
                         }
                     </script>
                     <h4 class="w3-border-bottom"><i class="w3-text-teal fa fa-user w3-margin-right"></i>{{ user.username }}</h4>
