--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -18,8 +18,8 @@
 
 <!-- Navbar (placed at the bottom of the header image) -->
   <ul class="w3-navbar w3-light-grey w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
-    <li><a href="#">Home</a></li>
-    <li><a href="#portfolio">Profile</a></li>
+    <li><a href="{{ url_for("home_page") }}">Home</a></li>
+    <li><a href="{{ url_for("get_profile") }}">Profile</a></li>
     <li><a href="#contact">Sign Up</a></li>
     <li><a href="#contact">Log In</a></li>
   </ul>
@@ -44,7 +44,7 @@
                     <img src="{{ user.pet.img_ava }}" alt="{{ user.pet.name }}" class="w3-round w3-image" width="100%">
                     <div class="overlay">
                        <h2>{{ user.pet.name }}</h2>
-                       <a class="info" href="#">View Profile</a>
+                       <a class="info" href="{{ url_for("get_profile") }}">View Profile</a>
                     </div>
                 </div>
                 <div class="w3-third w3-container">
