--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -34,11 +34,11 @@
 </ul>
 
 <!-- Page content -->
-<div class="w3-padding-top w3-padding-left w3-margin-top" id="portfolio">
+<div class="w3-padding-top w3-margin-top" id="portfolio">
 
 <!-- Images (Portfolio) -->
     <div class="w3-row">
-        <div class="w3-quarter w3-margin-bottom w3-container w3-card-2 w3-light-grey w3-center w3-round">
+        <div class="w3-quarter w3-margin-bottom w3-margin-left w3-container w3-card-2 w3-light-grey w3-center w3-round">
             <h1>Rank</h1>
         </div>
         <div class="w3-rest w3-container">
