--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -38,7 +38,7 @@
 
 <!-- Images (Portfolio) -->
     <div class="w3-row">
-        <div class="w3-quarter w3-margin-bottom w3-margin-left w3-margin-right w3-container w3-card-2 w3-light-grey w3-center w3-round">
+        <div class="w3-quarter w3-margin-bottom w3-container w3-round w3-light-grey w3-center">
             <h1>Rank</h1>
         </div>
         <div class="w3-rest w3-container">
