--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -39,7 +39,7 @@
 <!-- Images (Portfolio) -->
     <div class="w3-row">
         <div class="w3-quarter w3-margin-bottom w3-container w3-round w3-light-grey w3-center">
-            <h1>Rank</h1>
+            <h1 class="w3-border-bottom">Rank</h1>
         </div>
         <div class="w3-rest w3-container">
             {% for user in users %}
