--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -18,7 +18,7 @@
 
 <!-- Navbar (placed at the bottom of the header image) -->
   <ul class="w3-navbar w3-light-grey w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
-    <li><a href="{{ url_for("home_page") }}">Home</a></li>
+    <li><a href="#portfolio">Home</a></li>
     <li><a href="{{ url_for("get_profile") }}">Profile</a></li>
     <li><a href="#contact">Sign Up</a></li>
     <li><a href="#contact">Log In</a></li>
@@ -38,8 +38,10 @@
 
 <!-- Images (Portfolio) -->
     <div class="w3-row">
-        <div class="w3-quarter w3-margin-bottom w3-container w3-round w3-light-grey w3-center">
-            <h1 class="w3-border-bottom">Rank</h1>
+        <div class="w3-quarter w3-container">
+            <div class="w3-card-2 w3-container w3-margin-bottom w3-light-grey w3-round w3-center">
+                <h1 class="w3-border-bottom">Rank</h1>
+            </div>
         </div>
         <div class="w3-rest w3-container">
             {% for user in users %}
