--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,6 +2,7 @@
 <html>
 <title>PetsBook Home Page</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<script type=text/javascript src="../static/jquery-3.1.1.min.js"></script>
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <link rel="stylesheet" href="../static/font-awesome/css/font-awesome.min.css">
@@ -27,7 +28,7 @@
 
 <!-- Navbar on small screens -->
 <ul class="w3-navbar w3-light-grey w3-hide-large w3-hide-medium">
-  <li><a href="#">Home</a></li>
+  <li><a href="#pet">Home</a></li>
   <li><a href="#portfolio">Profile</a></li>
   <li><a href="#contact">Sign Up</a></li>
   <li><a href="#contact">Log In</a></li>
@@ -39,13 +40,14 @@
 <!-- Images (Portfolio) -->
     <div class="w3-row">
         <div class="w3-quarter w3-container">
-            <div class="w3-card-2 w3-container w3-margin-bottom w3-light-grey w3-round w3-center">
+            <div class="w3-container w3-margin-bottom w3-border-right w3-round w3-center">
                 <h1 class="w3-border-bottom">Rank</h1>
             </div>
         </div>
-        <div class="w3-rest w3-container">
+        <div class="w3-rest w3-container" id="pet">
             {% for user in users %}
-                <div class="w3-rest w3-card-2 w3-light-grey w3-margin-bottom w3-round">
+{#        {% set user = users[0] %}#}
+                <div class="w3-rest w3-border-bottom w3-margin-bottom w3-round">
                     <div class="hovereffect w3-container w3-twothird w3-margin-top w3-margin-bottom">
                         <img src="{{ user.pet.img_ava }}" alt="{{ user.pet.name }}" class="w3-round w3-image" width="100%">
                         <div class="overlay">
@@ -57,18 +59,47 @@
                         <h4 class="w3-border-bottom"><i class="w3-text-teal fa fa-user w3-margin-right"></i>{{ user.username }}</h4>
                         <h4 class="w3-border-bottom"><i class="w3-text-teal fa fa-paw w3-margin-right"></i>{{ user.pet.name }}</h4>
                         <h4 class="w3-border-bottom"><i class="w3-text-teal fa fa-pencil w3-margin-right"></i>{{ user.pet.upload_info.des }}</h4>
-                        <h4 class="w3-border-bottom"><i class="w3-text-red fa fa-heart w3-margin-right"></i><a id="clicks">{{ user.pet.like_count }}</a></h4>
-                        <button type="button" class="w3-red w3-margin-bottom w3-btn-block" onClick="onClick()" id ="crazy">Vote</button>
+                        <div class="like_button">
+                            <h4 class="w3-border-bottom"><i class="w3-text-red fa fa-heart w3-margin-right"></i><a class="count">{{ user.pet.like_count }}</a></h4>
+                            <button type="button" class="w3-red w3-margin-bottom w3-btn-block">Vote</button>
+                        </div>
                         <script type="text/javascript">
-                            var clicks = {{ user.pet.like_count }};
-                            function onClick() {
-                                clicks += 1;
-                                document.getElementById("clicks").innerHTML = clicks.toString();
-                                var a = true;
-                                if (a == true){
-                                    document.getElementById("crazy").disabled = true}
-                            }
+                            $(".like_button").unbind('click').on("click", function(){
+                                var $counter = $(this).find(".count");
+                                var count = $counter.text() | 0; //corose current count to an int
+                                count = count + 1;
+                                $counter.text(count);//set new count
+                            });
+{#                            $.ajax( { url: "https://api.mlab.com/api/1/databases/c4e6db/collections/users/"+ {{ user._id }} + ""+ "apiKey=qPzoH9RcOcSirKhmznNMhN1Tgv2Y7BlL",#}
+{#                              data: JSON.stringify( { "$set" : { "vote" : clicks } } ),#}
+{#                              type: "PUT",#}
+{#                              contentType: "application/json" } );#}
                         </script>
+
+{#                        <button type="button" class="w3-red w3-margin-bottom w3-btn-block" onClick="onClick()" id ="crazy">Vote</button>#}
+{#                        <script type="text/javascript">#}
+{#                            var clicks = {{ user.pet.like_count }};#}
+{#                                function onClick() {#}
+{#                                    clicks += 1;#}
+{#                                    document.getElementById("votes").innerHTML = clicks.toString();#}
+{#                                    var a = true;#}
+{#                                    if (a == true){#}
+{#                                        document.getElementById("crazy").disabled = true}#}
+{#                                    return clicks;#}
+{#                                }#}
+{#                            $(function() {#}
+{#                                $('button').click(function() {#}
+{#                                    var votes = clicks;#}
+{#                                    $.ajax({#}
+{#                                        url: '/',#}
+{#                                        data: {#}
+{#                                            votes : votes#}
+{#                                        },#}
+{#                                        type: 'POST'#}
+{#                                    });#}
+{#                                });#}
+{#                            });#}
+{#                        </script>#}
                     </div>
                     <div class="w3-third w3-container w3-margin-bottom">
                         <div class="w3-container w3-teal w3-center">
