--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -28,7 +28,7 @@
 
 <!-- Navbar on small screens -->
 <ul class="w3-navbar w3-light-grey w3-hide-large w3-hide-medium">
-  <li><a href="#pet">Home</a></li>
+  <li><a href="#pets">Home</a></li>
   <li><a href="#portfolio">Profile</a></li>
   <li><a href="#contact">Sign Up</a></li>
   <li><a href="#contact">Log In</a></li>
@@ -39,63 +39,52 @@
 
 <!-- Images (Portfolio) -->
     <div class="w3-row">
-        <div class="w3-quarter w3-container">
+        <div class="w3-quarter w3-container w3-border-right">
             <div class="w3-container w3-margin-bottom w3-round w3-center">
                 <h1 class="w3-border-bottom">Rank</h1>
             </div>
         </div>
-        <div class="w3-rest w3-container" id="pet">
+        <div class="w3-rest w3-container" id="pets">
             {% for user in users %}
                 {% set block_name = "block_" + user.username %}
-                <div class="w3-rest w3-border-bottom w3-margin-bottom w3-round">
+                <div class="w3-rest w3-border-bottom w3-margin-bottom">
                     <div class="hovereffect w3-container w3-twothird w3-margin-top w3-margin-bottom">
-                        <img src="{{ user.pet.img_ava }}" alt="{{ user.pet.name }}" class="w3-round w3-image" width="100%">
+                        <img src="{{ user.pet.img_ava }}" alt="{{ user.pet.name }}" class="w3-image" width="100%">
                         <div class="overlay">
                            <h2>{{ user.pet.name }}</h2>
                            <a class="info" href="{{ url_for("get_profile") }}">View Profile</a>
                         </div>
                     </div>
                     <div class="w3-third w3-container">
-                        <h4 class="w3-border-bottom"><i class="w3-text-teal fa fa-user w3-margin-right"></i><a class = 'nameId'>{{ user.username }}</a></h4>
-                        <h4 class="w3-border-bottom"><i class="w3-text-teal fa fa-paw w3-margin-right"></i>{{ user.pet.name }}</h4>
-                        <h4 class="w3-border-bottom"><i class="w3-text-teal fa fa-pencil w3-margin-right"></i>{{ user.pet.upload_info.des }}</h4>
+                        <h4><i class="w3-text-teal fa fa-user w3-margin-right"></i><a class = 'nameId'>{{ user.username }}</a></h4>
+                        <h4><i class="w3-text-teal fa fa-paw w3-margin-right"></i>{{ user.pet.name }}</h4>
+                        <h4><i class="w3-text-teal fa fa-pencil w3-margin-right"></i>{{ user.pet.upload_info.des }}</h4>
                         <div class="like_button {{block_name}}" >
                             <h4 class="w3-border-bottom"><i class="w3-text-red fa fa-heart w3-margin-right"></i><a class="count">{{ user.pet.like_count }}</a></h4>
-                            <button type="button" class="w3-red w3-margin-bottom w3-btn-block" id="crazy">Vote</button>
+                            <button type="button" class="w3-red w3-margin-bottom w3-btn-block" id="{{ block_name }}">Vote</button>
                         </div>
                         <script type="text/javascript">
-                            $(".{{ block_name }}").on("click", function(){
+                            $(".{{ block_name }}").one("click", function(){
                                 var $counter = $(this).find(".count");
                                 var count = $counter.text() | 0;
+                                count += 1;
+                                $counter.text(count);
                                 $.ajax({
-                                        url: '/',
-                                        data: {
-                                            username : "{{ user.username }}",
-                                            votes : count
-                                        },
-                                        type: 'POST'
-                                    })
-                                        .done(function(data) {
-                                    $(".count").text(data.votes).show()
+                                    url: '/',
+                                    data: {
+                                        username : "{{ user.username }}",
+                                        votes : count
+                                    },
+                                    type: 'POST'
                                 });
+                                $('#{{ block_name }}').replaceWith('<div class="w3-container w3-red w3-padding w3-margin-bottom w3-center">' + 'Voted' + '</div>');
                             });
                         </script>
-
-{#                        <button type="button" class="w3-red w3-margin-bottom w3-btn-block" onClick="onClick()" id ="crazy">Vote</button>#}
-{#                        <script type="text/javascript">#}
-{#                            var clicks = {{ user.pet.like_count }};#}
-{#                                function onClick() {#}
-{#                                    clicks += 1;#}
-{#                                    document.getElementById("votes").innerHTML = clicks.toString();#}
-
-{#                                }#}
-
-{#                        </script>#}
                     </div>
                     <div class="w3-third w3-container w3-margin-bottom">
                         <div class="w3-container w3-teal w3-center">
                             <p>More Pics</p>
-                        </div class="w3-half">
+                        </div>
                         {% for i in range(0,4) %}
                             <div class="w3-half">
                                 <img src="{{ user.pet.upload_info.img_upload }}" width="100%">
