--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -77,7 +77,7 @@
                                     },
                                     type: 'POST'
                                 });
-                                $('#{{ block_name }}').replaceWith('<div class="w3-container w3-red w3-padding w3-margin-bottom w3-center">' + 'Voted' + '</div>');
+                                $('#{{ block_name }}').replaceWith('<div class="w3-container w3-red w3-padding w3-margin-bottom w3-center">Voted</div>');
                             });
                         </script>
                     </div>
