--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -61,7 +61,7 @@
                         <h4><i class="w3-text-teal fa fa-pencil w3-margin-right"></i>{{ user.pet.upload_info.des }}</h4>
                         <div class="like_button {{block_name}}" >
                             <h4 class="w3-border-bottom"><i class="w3-text-red fa fa-heart w3-margin-right"></i><a class="count">{{ user.pet.like_count }}</a></h4>
-                            <button type="button" class="w3-red w3-margin-bottom w3-btn-block" id="{{ block_name }}">Vote</button>
+                            <button type="button" class="w3-red w3-padding w3-margin-bottom w3-btn-block" id="{{ block_name }}">Vote</button>
                         </div>
                         <script type="text/javascript">
                             $(".{{ block_name }}").one("click", function(){
