--- a/templates/homepageloggedin.html
+++ b/templates/homepageloggedin.html
@@ -19,23 +19,23 @@
 
 <!-- Navbar (placed at the bottom of the header image) -->
   <ul class="w3-navbar w3-light-grey w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
-    <li><a href="{{ url_for("home_page") }}">Home</a></li>
-    <li><a href="{{ url_for("do_signup") }}">Profile</a></li>
-    <li><a href="{{ url_for("do_signup") }}">Sign Up</a></li>
-    <li><a href="{{ url_for("do_signin") }}">Sign In</a></li>
+    <li><a href="#portfolio">Home</a></li>
+    <li><a href="{{ url_for("get_profile") }}">Profile</a></li>
+    <li><a href="#contact">Sign Up</a></li>
+    <li><a href="#contact">Log In</a></li>
   </ul>
 </header>
 
 <!-- Navbar on small screens -->
 <ul class="w3-navbar w3-light-grey w3-hide-large w3-hide-medium">
-  <li><a href="{{ url_for("home_page") }}">Home</a></li>
-  <li><a href="{{ url_for("do_signup") }}">Profile</a></li>
-  <li><a href="{{ url_for("do_signup") }}">Sign Up</a></li>
-  <li><a href="{{ url_for("do_signin") }}">Sign In</a></li>
+  <li><a href="#pets">Home</a></li>
+  <li><a href="#portfolio">Profile</a></li>
+  <li><a href="#contact">Sign Up</a></li>
+  <li><a href="#contact">Log In</a></li>
 </ul>
 
 <!-- Page content -->
-<div class="w3-padding-top w3-margin-top">
+<div class="w3-padding-top w3-margin-top" id="portfolio">
 
 <!-- Images (Portfolio) -->
     <div class="w3-row">
@@ -44,42 +44,42 @@
                 <h1 class="w3-border-bottom">Rank</h1>
             </div>
         </div>
-        <div class="w3-rest w3-container">
+        <div class="w3-rest w3-container" id="pets">
             {% for user in users %}
-{#                {% set block_name = "block_" + user.username %}#}
+                {% set block_name = "block_" + user.username %}
                 <div class="w3-rest w3-border-bottom w3-margin-bottom">
                     <div class="hovereffect w3-container w3-twothird w3-margin-top w3-margin-bottom">
                         <img src="{{ user.pet.img_ava }}" alt="{{ user.pet.name }}" class="w3-image" width="100%">
                         <div class="overlay">
                            <h2>{{ user.pet.name }}</h2>
-                           <a class="info" href="{{ url_for("do_signup") }}">View Profile</a>
+                           <a class="info" href="{{ url_for("get_profile") }}">View Profile</a>
                         </div>
                     </div>
                     <div class="w3-third w3-container">
                         <h5><i class="w3-text-teal fa fa-user w3-margin-right"></i><a class = 'nameId'>{{ user.username }}</a></h5>
                         <h5><i class="w3-text-teal fa fa-paw w3-margin-right"></i>{{ user.pet.name }}</h5>
                         <h5><i class="w3-text-teal fa fa-pencil w3-margin-right"></i>{{ user.pet.upload_info.des }}</h5>
-                        <div class="like_button" >
+                        <div class="like_button {{block_name}}" >
                             <h5 class="w3-border-bottom"><i class="w3-text-red fa fa-heart w3-margin-right"></i><a class="count">{{ user.pet.like_count }}</a></h5>
-                            <a href="{{ url_for("do_signup") }}"><button type="button" class="w3-red w3-padding w3-margin-bottom w3-btn-block">Vote</button></a>
+                            <button type="button" class="w3-red w3-padding w3-margin-bottom w3-btn-block" id="{{ block_name }}">Vote</button>
                         </div>
-{#                        <script type="text/javascript">#}
-{#                            $(".{{ block_name }}").one("click", function(){#}
-{#                                var $counter = $(this).find(".count");#}
-{#                                var count = $counter.text() | 0;#}
-{#                                count += 1;#}
-{#                                $counter.text(count);#}
-{#                                $.ajax({#}
-{#                                    url: '/',#}
-{#                                    data: {#}
-{#                                        username : "{{ user.username }}",#}
-{#                                        votes : count#}
-{#                                    },#}
-{#                                    type: 'POST'#}
-{#                                });#}
-{#                                $('#{{ block_name }}').replaceWith('<div class="w3-container w3-red w3-padding w3-margin-bottom w3-center">Voted</div>');#}
-{#                            });#}
-{#                        </script>#}
+                        <script type="text/javascript">
+                            $(".{{ block_name }}").one("click", function(){
+                                var $counter = $(this).find(".count");
+                                var count = $counter.text() | 0;
+                                count += 1;
+                                $counter.text(count);
+                                $.ajax({
+                                    url: '/',
+                                    data: {
+                                        username : "{{ user.username }}",
+                                        votes : count
+                                    },
+                                    type: 'POST'
+                                });
+                                $('#{{ block_name }}').replaceWith('<div class="w3-container w3-red w3-padding w3-margin-bottom w3-center">Voted</div>');
+                            });
+                        </script>
                     </div>
                     <div class="w3-third w3-container w3-margin-bottom">
                         <div class="w3-container w3-teal w3-center">
