--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -11,7 +11,7 @@
 
 <!-- Header -->
 <header class="w3-display-container w3-content" style="max-width:1500px">
-  <img class="w3-image" src="http://pawsitivepetsit.com/wp-content/uploads/2015/03/Pets.jpg" alt="Featured Pets" width="100%">
+  <img class="w3-image" src="http://pawsitivepetsit.com/wp-content/uploads/2015/03/Pets.jpg" alt="Featured Pet" width="100%">
   <div class="w3-display-middle w3-padding-xlarge w3-border w3-wide w3-text-light-grey w3-center">
     <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">PetsBook</h1>
     <h5 class="w3-hide-large" style="white-space:nowrap">PetsBook</h5>
