--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -46,52 +46,54 @@
         </div>
         <div class="w3-rest w3-container">
             {% for user in users %}
-{#                {% set block_name = "block_" + user.username %}#}
-                <div class="w3-rest w3-border-bottom w3-margin-bottom">
-                    <div class="hovereffect w3-container w3-twothird w3-margin-top w3-margin-bottom">
-                        <img src="{{ user.pet.img_ava }}" alt="{{ user.pet.name }}" class="w3-image" width="100%">
-                        <div class="overlay">
-                           <h2>{{ user.pet.name }}</h2>
-                           <a class="info" href="{{ url_for("do_signup") }}">View Profile</a>
-                        </div>
-                    </div>
-                    <div class="w3-third w3-container">
-                        <h5><i class="w3-text-teal fa fa-user w3-margin-right"></i><a class = 'nameId'>{{ user.username }}</a></h5>
-                        <h5><i class="w3-text-teal fa fa-paw w3-margin-right"></i>{{ user.pet.name }}</h5>
-                        <h5><i class="w3-text-teal fa fa-pencil w3-margin-right"></i>{{ user.pet.upload_info.des }}</h5>
-                        <div class="like_button" >
-                            <h5 class="w3-border-bottom"><i class="w3-text-red fa fa-heart w3-margin-right"></i><a class="count">{{ user.pet.like_count }}</a></h5>
-                            <a href="{{ url_for("do_signup") }}"><button type="button" class="w3-red w3-padding w3-margin-bottom w3-btn-block">Vote</button></a>
-                        </div>
-{#                        <script type="text/javascript">#}
-{#                            $(".{{ block_name }}").one("click", function(){#}
-{#                                var $counter = $(this).find(".count");#}
-{#                                var count = $counter.text() | 0;#}
-{#                                count += 1;#}
-{#                                $counter.text(count);#}
-{#                                $.ajax({#}
-{#                                    url: '/',#}
-{#                                    data: {#}
-{#                                        username : "{{ user.username }}",#}
-{#                                        votes : count#}
-{#                                    },#}
-{#                                    type: 'POST'#}
-{#                                });#}
-{#                                $('#{{ block_name }}').replaceWith('<div class="w3-container w3-red w3-padding w3-margin-bottom w3-center">Voted</div>');#}
-{#                            });#}
-{#                        </script>#}
-                    </div>
-                    <div class="w3-third w3-container w3-margin-bottom">
-                        <div class="w3-container w3-teal w3-center">
-                            <p>More Pics</p>
-                        </div>
-                        {% for i in range(0,4) %}
-                            <div class="w3-half">
-                                <img src="{{ user.pet.upload_info.img_upload }}" width="100%">
+                {% if user.pet != None %}
+    {#                {% set block_name = "block_" + user.username %}#}
+                    <div class="w3-rest w3-border-bottom w3-margin-bottom">
+                        <div class="hovereffect w3-container w3-twothird w3-margin-top w3-margin-bottom">
+                            <img src="{{ user.pet.img_ava }}" alt="{{ user.pet.name }}" class="w3-image" width="100%">
+                            <div class="overlay">
+                               <h2>{{ user.pet.name }}</h2>
+                               <a class="info" href="{{ url_for("do_signup") }}">View Profile</a>
                             </div>
-                        {% endfor %}
+                        </div>
+                        <div class="w3-third w3-container">
+                            <h5><i class="w3-text-teal fa fa-user w3-margin-right"></i><a class = 'nameId'>{{ user.username }}</a></h5>
+                            <h5><i class="w3-text-teal fa fa-paw w3-margin-right"></i>{{ user.pet.name }}</h5>
+                            <h5><i class="w3-text-teal fa fa-pencil w3-margin-right"></i>{{ user.pet.upload_info.des }}</h5>
+                            <div class="like_button" >
+                                <h5 class="w3-border-bottom"><i class="w3-text-red fa fa-heart w3-margin-right"></i><a class="count">{{ user.pet.like_count }}</a></h5>
+                                <a href="{{ url_for("do_signup") }}"><button type="button" class="w3-red w3-padding w3-margin-bottom w3-btn-block">Vote</button></a>
+                            </div>
+    {#                        <script type="text/javascript">#}
+    {#                            $(".{{ block_name }}").one("click", function(){#}
+    {#                                var $counter = $(this).find(".count");#}
+    {#                                var count = $counter.text() | 0;#}
+    {#                                count += 1;#}
+    {#                                $counter.text(count);#}
+    {#                                $.ajax({#}
+    {#                                    url: '/',#}
+    {#                                    data: {#}
+    {#                                        username : "{{ user.username }}",#}
+    {#                                        votes : count#}
+    {#                                    },#}
+    {#                                    type: 'POST'#}
+    {#                                });#}
+    {#                                $('#{{ block_name }}').replaceWith('<div class="w3-container w3-red w3-padding w3-margin-bottom w3-center">Voted</div>');#}
+    {#                            });#}
+    {#                        </script>#}
+                        </div>
+                        <div class="w3-third w3-container w3-margin-bottom">
+                            <div class="w3-container w3-teal w3-center">
+                                <p>More Pics</p>
+                            </div>
+                            {% for i in range(0,4) %}
+                                <div class="w3-half">
+                                    <img src="{{ user.pet.upload_info.img_upload }}" width="100%">
+                                </div>
+                            {% endfor %}
+                        </div>
                     </div>
-                </div>
+                {% endif %}
             {% endfor %}
         </div>
 
