--- a/templates/signin.html
+++ b/templates/signin.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="w3-card-4 w3-margin">
-    <div class="w3-container w3-teal w3-margin-bottom">
+    <div class="w3-container w3-green w3-margin-bottom">
         <h1>Sign In</h1>
     </div>
     <form class="w3-container" method="post" action="{{ url_for("do_signin") }}">
