--- a/templates/homepageloggedin.html
+++ b/templates/homepageloggedin.html
@@ -56,7 +56,7 @@ for (i = 0; i < close.length; i++) {
     <div class="w3-row">
         <div class="w3-quarter w3-container">
             <div class="w3-container w3-margin-bottom" id="sidebar">
-                <h1 class="w3-green w3-center">Rank</h1>
+                <h1 class="w3-red w3-center">Rank</h1>
                 <div class="w3-container">
                     {% for pet in rank %}
                         <h5 class="w3-border-bottom">{{ pet[1] }} : {{ pet[0] }}</h5>
