--- a/templates/signin.html
+++ b/templates/signin.html
@@ -4,19 +4,33 @@
     <meta charset="UTF-8">
     <title>Sign In</title>
     <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lobster">
+    <link rel="stylesheet" href="../static/footer.css">
 </head>
 <body>
-<div class="w3-card-4 w3-margin">
-    <div class="w3-container w3-green w3-margin-bottom">
-        <h1>Sign In</h1>
+<ul class="w3-navbar w3-green">
+    <div class="w3-container w3-half">
+        <h1 style="font-family: 'Lobster', serif; margin-left: 16px">PetsBook</h1>
     </div>
-    <form class="w3-container" method="post" action="{{ url_for("do_signin") }}">
-        <label>Username</label>
-        <input type="text" name="username" class="w3-input" required><br>
-        <label>Password</label>
-        <input type="password" name="password" class="w3-input" required><br>
-        <input type="submit" value="Sign In" class="w3-button w3-red w3-btn-block w3-margin-bottom">
-    </form>
+</ul>
+<div class="w3-container">
+    <div class="w3-card-4 w3-round" style="margin: 64px">
+        <div class="w3-container w3-green w3-round w3-margin-bottom">
+            <h1>Sign In</h1>
+        </div>
+        <form class="w3-container" method="post" action="{{ url_for("home_page") }}">
+            <p class="w3-text-red">{{ alert_signin }}</p>
+            <label>Username</label>
+            <input type="text" name="username_signin" class="w3-input" placeholder="Enter your username" required><br>
+            <label>Password</label>
+            <input type="password" name="password_signin" class="w3-input" placeholder="Enter your password" required><br>
+            <input type="submit" value="Sign In" name="signin" class="w3-button w3-red w3-btn-block w3-margin-bottom w3-round">
+        </form>
+    </div>
 </div>
+<footer class="w3-container w3-center w3-red">
+    <h3 style="font-family: 'Lobster', serif">PetsBook</h3>
+    <p>petsbookdevteam@gmail.com</p>
+</footer>
 </body>
 </html>
