--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -13,12 +13,12 @@
 <body>
 
 <ul class="w3-navbar w3-green">
-    <div class="w3-container w3-center w3-half">
+    <div class="w3-container w3-center w3-third">
         <h1 class="w3-border-right" style="font-family: 'Lobster', serif">PetsBook</h1>
     </div>
-    <div class="w3-container w3-half">
+    <div class="w3-container w3-twothird">
         <form method="POST" action="{{ url_for("home_page") }}">
-            <div class="w3-container w3-quarter">
+            <div class="w3-container w3-center w3-quarter">
                 <h1>Sign In</h1>
             </div>
             <div class="w3-container w3-quarter">
@@ -35,10 +35,10 @@
 </ul>
 <div class="w3-container">
     <div class="w3-display-container w3-content w3-padding w3-twothird" style="margin-top: 16px">
-        <img class="mySlides w3-animate-fading w3-image" src="https://scontent-hkg3-1.xx.fbcdn.net/v/t35.0-12/14907733_1120266308092137_1144984849_o.jpg?oh=dd5e48f194cbb557afc808f8cfffa7e0&oe=58159AAA" width="100%">
-        <img class="mySlides w3-animate-fading w3-image" src="https://scontent-hkg3-1.xx.fbcdn.net/v/t35.0-12/14813190_1120266298092138_1345671897_o.jpg?oh=971f63770e9da5a9c72902a6388ce6f1&oe=5816783E" width="100%">
-        <img class="mySlides w3-animate-fading w3-image" src="https://scontent-hkg3-1.xx.fbcdn.net/v/t35.0-12/14859423_1120272948091473_2005818596_o.png?oh=0bf1a0f301ac4998999da8a1c6df11c1&oe=58166D52" width="100%">
-        <img class="mySlides w3-animate-fading w3-image" src="https://scontent-hkg3-1.xx.fbcdn.net/v/t35.0-12/14813382_1120266294758805_1937196438_o.jpg?oh=8e498e72fd469e1811e8bc27fff28587&oe=5815562F" width="100%">
+        <img class="mySlides w3-animate-fading w3-image" src="../static/slideshow/img_1.jpg" style="width: 100%;">
+        <img class="mySlides w3-animate-fading w3-image" src="../static/slideshow/img_2.jpg" style="width: 100%;">
+        <img class="mySlides w3-animate-fading w3-image" src="../static/slideshow/img_3.png" style="width: 100%;">
+        <img class="mySlides w3-animate-fading w3-image" src="../static/slideshow/img_1.jpg" style="width: 100%;">
         <script>
             var slideIndex = 0;
             carousel();
@@ -75,7 +75,7 @@
         </div>
     </div>
     <div class="w3-container w3-twothird w3-center">
-        <h1 class="w3-text-red" style="font-family: 'Great Vibes', serif"><i>"Where the cuteness spreads around."</i></h1>
+        <h1 class="w3-text-red" style="font-family: 'Great Vibes', serif"><i>"Where cuteness spreads around."</i></h1>
     </div>
 </div>
 <footer class="w3-container w3-red w3-center">
