--- a/static/alert.css
+++ b/static/alert.css
@@ -2,12 +2,12 @@
     padding-top: 4px;
     padding-bottom: 4px;
     padding-left: 32px;
-    padding-right: 16px;
+    padding-right: 8px;
     background-color: #f44336;
     color: white;
     opacity: 1;
     transition: opacity 0.6s;
-    margin-bottom: 15px;
+    margin-bottom: 16px;
 }
 
 .alert.success {background-color: #4CAF50;}
@@ -15,6 +15,7 @@
 .alert.warning {background-color: #ff9800;}
 
 .closebtn {
+    margin-top: 4px;
     margin-left: 15px;
     color: white;
     font-weight: bold;
