--- a/templates/homepageloggedin.html
+++ b/templates/homepageloggedin.html
@@ -3,69 +3,111 @@
 <title>PetsBook Home Page</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script type=text/javascript src="../static/jquery-3.1.1.min.js"></script>
-<script type=text/javascript src="../static/jquery.sticky.js"></script>
+<script type=text/javascript src="../static/garand-sticky/jquery.sticky.js"></script>
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lobster">
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Great+Vibes">
 <link rel="stylesheet" href="../static/font-awesome/css/font-awesome.min.css">
 <link rel="stylesheet" href="../static/effect.css">
 <link rel="stylesheet" href="../static/alert.css">
+<link rel="stylesheet" href="../static/effect.css">
 <body>
 
 <!-- Header -->
-<div class="alert success" style="width: 100%">
-    <span class="closebtn">&times;</span>
-    <p>You have successfully signed in to your account!</p>
-</div>
-<script>
-var close = document.getElementsByClassName("closebtn");
-var i;
-for (i = 0; i < close.length; i++) {
-    close[i].onclick = function(){
-        var div = this.parentElement;
-        div.style.opacity = "0";
-        setTimeout(function(){ div.style.display = "none"; }, 600);
-    }
-}
-</script>
+<ul class="w3-navbar w3-green">
+    <div class="w3-container w3-center w3-third">
+        <h1 class="w3-border-right" style="font-family: 'Lobster', serif">PetsBook</h1>
+    </div>
+    <div class="w3-container w3-twothird w3-center">
+        <h1 style="font-family: 'Great Vibes', serif"><i>"Where cuteness spreads around."</i></h1>
+    </div>
+</ul>
 <header class="w3-display-container w3-content" style="max-width:1500px">
-  <img class="w3-image" src="http://pawsitivepetsit.com/wp-content/uploads/2015/03/Pets.jpg" alt="Featured Pet" width="100%">
-  <div class="w3-display-middle w3-padding-xlarge w3-border w3-wide w3-text-light-grey w3-center">
-    <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">PetsBook</h1>
-    <h5 class="w3-hide-large" style="white-space:nowrap">PetsBook</h5>
-  </div>
+    <img class="mySlides w3-animate-fading w3-image" src="../static/slideshow/img_1.jpg" style="width: 100%;">
+    <img class="mySlides w3-animate-fading w3-image" src="../static/slideshow/img_2.jpg" style="width: 100%;">
+    <img class="mySlides w3-animate-fading w3-image" src="../static/slideshow/img_3.png" style="width: 100%;">
+    <img class="mySlides w3-animate-fading w3-image" src="../static/slideshow/img_1.jpg" style="width: 100%;">
+    <script>
+        var slideIndex = 0;
+        carousel();
+        function carousel() {
+            var i;
+            var x = document.getElementsByClassName("mySlides");
+            for (i = 0; i < x.length; i++) {
+                x[i].style.display = "none";
+            }
+            slideIndex++;
+            if (slideIndex > x.length) {slideIndex = 1}
+            x[slideIndex-1].style.display = "block";
+            setTimeout(carousel, 10000); // Change image every 2 seconds
+        }
+    </script>
+    <div class="w3-display-middle w3-padding-xlarge w3-border w3-wide w3-light-grey w3-text-dark-grey w3-center w3-round" style="opacity: 0.7">
+        <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge" style="font-family: 'Lobster', serif">PetsBook</h1>
+        <h5 class="w3-hide-large" style="font-family: 'Lobster', serif">PetsBook</h5>
+    </div>
 
 <!-- Navbar (placed at the bottom of the header image) -->
-<ul class="w3-navbar w3-green w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
-    <li><a href="{{ url_for("home") }}">Home</a></li>
-    <li><a href="">Profile</a></li>
-    <li><a href="{{ url_for("do_signout") }}">Sign Out</a></li>
-</ul>
+    <ul class="w3-navbar w3-large w3-green w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
+        <li><a class="w3-hover-red" href="{{ url_for("home") }}">Home</a></li>
+        <li><a class="w3-hover-red" href="">Profile</a></li>
+        <li><a class="w3-hover-red" href="{{ url_for("do_signout") }}">Sign Out</a></li>
+    </ul>
 </header>
 
 {#<!-- Navbar on small screens -->#}
-<ul class="w3-navbar w3-green w3-hide-large w3-hide-medium">
-    <li><a href="{{ url_for("home") }}">Home</a></li>
-    <li><a href="">Profile</a></li>
-    <li><a href="{{ url_for("do_signout") }}">Sign Out</a></li>
+<ul class="w3-navbar w3-large w3-margin-top w3-green w3-hide-large w3-hide-medium w3-round">
+    <li><a class="w3-hover-red" href="{{ url_for("home") }}">Home</a></li>
+    <li><a class="w3-hover-red" href="">Profile</a></li>
+    <li><a class="w3-hover-red" href="{{ url_for("do_signout") }}">Sign Out</a></li>
 </ul>
 
 <!-- Page content -->
-<div class="w3-padding-top w3-margin-top" id="portfolio">
+<div class="w3-margin-bottom" style="margin-top: 32px">
+    <div class="w3-round alert success" style="width: 100%">
+        <span class="closebtn">&times;</span>
+        <p>You have successfully signed in to your account!</p>
+    </div>
+    <script>
+    var close = document.getElementsByClassName("closebtn");
+    var i;
+    for (i = 0; i < close.length; i++) {
+        close[i].onclick = function(){
+            var div = this.parentElement;
+            div.style.opacity = "0";
+            setTimeout(function(){ div.style.display = "none"; }, 600);
+        }
+    }
+    </script>
 
 <!-- Images (Portfolio) -->
     <div class="w3-row">
         <div class="w3-quarter w3-container">
-            <div class="w3-container w3-margin-bottom" id="sidebar">
-                <h1 class="w3-red w3-center">Rank</h1>
+            <div class="w3-container w3-border-bottom" id="sidebar">
+                <h1 class="w3-round w3-red w3-center">Top 15</h1>
                 <div class="w3-container">
                     {% for pet in rank %}
                         <h5 class="w3-border-bottom">{{ pet[1] }} : {{ pet[0] }}</h5>
                     {% endfor %}
+                <h5>Test</h5>
+                <h5>Test</h5>
+                <h5>Test</h5>
+                <h5>Test</h5>
+                <h5>Test</h5>
+                <h5>Test</h5>
+                <h5>Test</h5>
+                <h5>Test</h5>
+                <h5>Test</h5>
+                <h5>Test</h5>
+                <h5>Test</h5>
+                <h5>Test</h5>
+                <h5>Test</h5>
                 </div>
             </div>
             <script>
                 $(document).ready(function(){
-                    $("#sidebar").sticky({topSpacing : 10, bottomSpacing : 10});
+                    $("#sidebar").sticky({topSpacing : 16, bottomSpacing : 116});
                 });
                 $(window).resize(function () {
                     if (jQuery(window).innerWidth() < 584) {
@@ -92,11 +134,11 @@ for (i = 0; i < close.length; i++) {
                             <h5><i class="w3-text-green fa fa-pencil w3-margin-right"></i>{{ user.pet.upload_info.des }}</h5>
                             {% if liked_user in user.pet.liked_users %}
                                 <h5 class="w3-border-bottom"><i class="w3-text-red fa fa-heart w3-margin-right"></i>{{ user.pet.like_count }}</h5>
-                                <div class="w3-container w3-red w3-padding w3-margin-bottom w3-center">Voted</div>
+                                <div class="w3-container w3-red w3-padding w3-margin-bottom w3-center w3-round">Voted</div>
                             {% elif liked_user not in user.pet.liked_users %}
                                 <div class="{{block_name}}" >
                                     <h5 class="w3-border-bottom"><i class="w3-text-red fa fa-heart w3-margin-right"></i><a class="count" id="{{ block_name }}_1">{{ user.pet.like_count }}</a></h5>
-                                    <button type="button" class="w3-red w3-padding w3-margin-bottom w3-btn-block" id="{{ block_name }}_2">Vote</button>
+                                    <button type="button" class="w3-red w3-padding w3-margin-bottom w3-btn-block w3-round" id="{{ block_name }}_2">Vote</button>
                                 </div>
                                 <script type="text/javascript">
                                     $(".{{ block_name }}").on("click", function(){
@@ -135,5 +177,9 @@ for (i = 0; i < close.length; i++) {
         </div>
     </div>
 </div>
+<footer class="w3-container w3-red w3-center">
+    <h3 style="font-family: 'Lobster', serif">PetsBook</h3>
+    <p>petsbookdevteam@gmail.com</p>
+</footer>
 </body>
 </html>
