--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>PetsBook Home Page</title>
+<title>PetsBook</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script type=text/javascript src="../static/jquery-3.1.1.min.js"></script>
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
