--- a/templates/homepageloggedin.html
+++ b/templates/homepageloggedin.html
@@ -23,6 +23,21 @@
         <h1 style="font-family: 'Great Vibes', serif"><i>"Where cuteness spreads around."</i></h1>
     </div>
 </ul>
+<div class="w3-animate-right w3-margin w3-round alert success">
+    <span class="closebtn">&times;</span>
+    <p>You have successfully signed in to your account!</p>
+</div>
+<script>
+var close = document.getElementsByClassName("closebtn");
+var i;
+for (i = 0; i < close.length; i++) {
+    close[i].onclick = function(){
+        var div = this.parentElement;
+        div.style.opacity = "0";
+        setTimeout(function(){ div.style.display = "none"; }, 600);
+    }
+}
+</script>
 <header class="w3-display-container w3-content" style="max-width:1500px">
     <img class="mySlides w3-animate-fading w3-image" src="../static/slideshow/img_1.jpg" style="width: 100%;">
     <img class="mySlides w3-animate-fading w3-image" src="../static/slideshow/img_2.jpg" style="width: 100%;">
@@ -49,43 +64,28 @@
     </div>
 
 <!-- Navbar (placed at the bottom of the header image) -->
-    <ul class="w3-navbar w3-large w3-green w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
-        <li><a class="w3-hover-red" href="{{ url_for("home") }}">Home</a></li>
-        <li><a class="w3-hover-red" href="">Profile</a></li>
-        <li><a class="w3-hover-red" href="{{ url_for("do_signout") }}">Sign Out</a></li>
+    <ul class="w3-navbar w3-xlarge w3-red w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
+        <li><a class="w3-hover-green" href="{{ url_for("home") }}">Home</a></li>
+        <li><a class="w3-hover-green" href="">Profile</a></li>
+        <li><a class="w3-hover-green" href="{{ url_for("do_signout") }}">Sign Out</a></li>
     </ul>
 </header>
 
 {#<!-- Navbar on small screens -->#}
-<ul class="w3-navbar w3-large w3-margin-top w3-green w3-hide-large w3-hide-medium w3-round">
-    <li><a class="w3-hover-red" href="{{ url_for("home") }}">Home</a></li>
-    <li><a class="w3-hover-red" href="">Profile</a></li>
-    <li><a class="w3-hover-red" href="{{ url_for("do_signout") }}">Sign Out</a></li>
+<ul class="w3-navbar w3-large w3-margin-top w3-red w3-hide-large w3-hide-medium">
+    <li><a class="w3-hover-green" href="{{ url_for("home") }}">Home</a></li>
+    <li><a class="w3-hover-green" href="">Profile</a></li>
+    <li><a class="w3-hover-green" href="{{ url_for("do_signout") }}">Sign Out</a></li>
 </ul>
 
 <!-- Page content -->
 <div class="w3-margin-bottom" style="margin-top: 32px">
-    <div class="w3-round alert success" style="width: 100%">
-        <span class="closebtn">&times;</span>
-        <p>You have successfully signed in to your account!</p>
-    </div>
-    <script>
-    var close = document.getElementsByClassName("closebtn");
-    var i;
-    for (i = 0; i < close.length; i++) {
-        close[i].onclick = function(){
-            var div = this.parentElement;
-            div.style.opacity = "0";
-            setTimeout(function(){ div.style.display = "none"; }, 600);
-        }
-    }
-    </script>
 
 <!-- Images (Portfolio) -->
     <div class="w3-row">
         <div class="w3-quarter w3-container">
             <div class="w3-container w3-border-bottom" id="sidebar">
-                <h1 class="w3-round w3-red w3-center">Top 15</h1>
+                <h1 class="w3-margin-top w3-round w3-green w3-center">Top 15</h1>
                 <div class="w3-container">
                     {% for pet in rank %}
                         <h5 class="w3-border-bottom">{{ pet[1] }} : {{ pet[0] }}</h5>
@@ -108,7 +108,7 @@
             <script>
                 $(document).ready(function(){
                     if (jQuery(window).innerWidth() >600) {
-                        $("#sidebar").sticky({topSpacing: 16, bottomSpacing: 116});
+                        $("#sidebar").sticky({bottomSpacing: 130});
                     }
                 })
             </script>
